changed website linked to IP address reveal

--- a/support.html
+++ b/support.html
@@ -55,7 +55,7 @@
     <a href="https://nvd.nist.gov/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site]
       <span class="bubbletext">This is a Database of Known vulnerabilites recognized by the governement.</span>
     </button></a>
-    <a href="http://icanhazip.com/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address
+    <a href="https://ipchicken.com/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address
       <span class="bubbletext">This site will literally show your current IP address, DO NOT click on this if you are streaming.</span>
     </button></a>
  </p>
