added first 3d print file - rough

--- a/downloads.html
+++ b/downloads.html
@@ -80,10 +80,10 @@
     <th> Preview </th>
   </tr>
   <tr>
-    <td> File - Link Included </td>
-    <td> 0.0 </td>
-    <td> Description of said file </td>
-    <td> <img src="images/3d/example.png" /></td>
+    <td> JD Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
+    <td> 0.1 </td>
+    <td> Planter Plate for Low Poly Planter </td>
+    <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
   </tr>
  </table>
 </center>
