--- a/downloads.html
+++ b/downloads.html
@@ -82,7 +82,10 @@
   <tr>
     <td> JD Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
     <td> 0.1 </td>
-    <td> Planter Plate for Low Poly Planter </td>
+    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599">Large Low Poly Planter</a> <br>
+         Infill: 15% </br>
+         Filament: PLA/PETG </br>
+     </td>
     <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
   </tr>
  </table>
@@ -131,5 +134,5 @@
     <br>
     <br>
   </body>
-  <footer>&copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.0</footer>
+  <footer>&copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1</footer>
 </html>
