new site on support page

--- a/support.html
+++ b/support.html
@@ -47,11 +47,14 @@
   <p>
       <h2><u>Useful Websites</u></h2>
     <a href="https://prism-break.org/en/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...]
-      <span class="bubbletext">Use recommended safe software from the PRISM program, read up on it. Basically what Snowden leaked</span>
+      <span class="bubbletext">Use recommended safe software from the PRISM program, read up on it. Basically what Snowden leaked.</span>
       </button></a>
     <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All]
       <span class="bubbletext">Know what ports are open on your computer, or network for that much? Use this site to check them all.</span>
      </button></a>
+     <a href="https://www.exploit-db.com/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Check Everything Else"></i> Exploit-DB [Public Exploits]
+       <span class="bubbletext">Get to know the public exploits out in the wild before you even buy that product!</span>
+      </button></a>
     <a href="https://nvd.nist.gov/" target="_blank"><button class="bubble"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site]
       <span class="bubbletext">This is a Database of Known vulnerabilites recognized by the governement.</span>
     </button></a>
