--- a/downloads.html
+++ b/downloads.html
@@ -28,6 +28,7 @@
 <div class="navigation">
  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
  <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Start</button></a>
+ <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
  </div>
 </head>
