--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
       <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
-      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+      <a href="https://www.phantominc.net/shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+      <!--a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a-->
       <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
     </div>
   </head>
 
