staging push for shop, additonal listings

--- a/shop.html
+++ b/shop.html
@@ -39,7 +39,7 @@
  <body>
     <p>
       <h1>Shop</h1>
-      <p>A small selection of 3D printed products! All prices include delivery.</p>
+      <p>A small selection of 3D printed products! All prices include delivery. </p>
     </p>
     <br>
     <br>
@@ -48,19 +48,37 @@
       <div><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Orange)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU filament.</h4></p>
+        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Clear-ish)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU filament.</h4></p>
+        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Green)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU filament.</h4></p>
+        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><a href=""><button class="menu">Buy Now</button></a></p>
+      </div>
+      <div><img src="images/3d/example.png" />
+        <h2>iPhone 12 Max Rubber Case (Teal)</h2>
+        <p class="price">$15</p>
+        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><a href=""><button class="menu">Buy Now</button></a></p>
+      </div>
+      <div><img src="images/3d/example.png" />
+        <h2>iPhone 12 Max Rubber Case (Pink)</h2>
+        <p class="price">$15</p>
+        <p><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
+        <p><a href=""><button class="menu">Buy Now</button></a></p>
+      </div>
+      <div><img src="images/3d/example.png" />
+        <h2>iPhone 12 Max Rubber Case (Pastel Pink)</h2>
+        <p class="price">$15</p>
+        <p><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
         <p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
   </center>
