created separate shop css, adjusted shop appearence

--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
 <html>
 <head>
   <title>Phantom Inc |'' | - Shop</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/shop.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
@@ -45,41 +45,41 @@
     <br>
     <!-- Shop Time -->
     <center>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Orange)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Clear-ish)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Green)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Teal)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Pink)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
-      <div><img src="images/3d/example.png" />
+      <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Rubber Case (Pastel Pink)</h2>
         <p class="price">$15</p>
         <p><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
-        <p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
   </center>
     <br>
