formatting changes, testing

--- a/shop.html
+++ b/shop.html
@@ -46,39 +46,39 @@
     <!-- Shop Time -->
     <center>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Orange)</h2>
+        <h2>iPhone 12 Max Case (Orange)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Orange)<h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Clear-ish)</h2>
+        <h2>iPhone 12 Max Case (Clear-ish)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Clear-ish)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Green)</h2>
+        <h2>iPhone 12 Max Case (Green)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Green)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Teal)</h2>
+        <h2>iPhone 12 Max Case (Teal)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Teal)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Pink)</h2>
+        <h2>iPhone 12 Max Case (Pink)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Pink)</h5><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Rubber Case (Pastel Pink)</h2>
+        <h2>iPhone 12 Max Case (Pastel Pink)</h2>
         <p class="price">$15</p>
-        <p><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Pastel Pink)</h5><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
       </div>
   </center>
