new colors who dis, fixed updates page, added about title

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <br>
   <p><center><h2> - - - </h2></center></p>
 <br>
+<h2>About</h2>
 <p>
   Phantom Inc. an idea from long ago. <br>
   This site was created to keep track of all my random projects <br>
