--- a/updates.html
+++ b/updates.html
@@ -34,6 +34,7 @@
   <p>
    <h5>All Updates</h5>
   </p>
+  <p>All updates posted are focused on major additions or changes, for <u>all</u> changes follow along on <a href="https://github.com/jeremysmai/phantominc" target="_blank">Github</a></p>
   <p>
    <h2>Update 4</h2>
   <ul>
