fixed update borders

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <br>
     <!-- Start of Post Section -->
 
-     <h2>Update 4</h2>
+     <h2 style="border: 1px solid #8bc34a; width:15%;">Update 4</h2>
     <ul>
       <li> Updated Downloads page, added new look and items</li>
       <li> Added media page for external links</li>
