--- a/updates.html
+++ b/updates.html
@@ -24,7 +24,7 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
- <style> h2 {border: 1px solid #8bc34a; width:15%;}</style>
+ <style> h2 {border: 1px solid #8bc34a; width:150px;}</style>
  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
  <div class="navigation">
     <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
