fixes for shop page

--- a/shop.html
+++ b/shop.html
@@ -41,6 +41,7 @@
       <h1>Shop</h1>
       <p>A small selection of 3D printed products! All prices include delivery. </p>
     </p>
+    <b>(coming soon) - finalizing designs</b>
     <br>
     <br>
     <!-- Shop Time -->
