--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   <br>
     <!-- Start of Post Section -->
 
-     <h2 style="border: 1px solid #8bc34a; width:150px;">Update 4</h2>
+     <h2 style="border: 1px solid #8bc34a; width:150px;">Update 5</h2>
     <ul>
-      <li> Updated Downloads page, added new look and items</li>
-      <li> Added media page for external links</li>
-      <li> Added GTARP server page (under construction)</li>
-      <li> Overall site cleanup and upgrades </li>
-      &gt; &gt; posted November 2020 &lt; &lt;
+      <li> Changed overall site font</li>
+      <li> Changed Background color scheme, added color</li>
+      <li> Added Shop page (under construction)</li>
+      <li> Other projects in the works, check the github </li>
+      &gt; &gt; posted October 2021 &lt; &lt;
     </ul>
 
 <br>
@@ -76,5 +76,5 @@
   <br>
 </body>
 
- <footer>&copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
+ <footer>&copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
 </html>
