--- a/updates.html
+++ b/updates.html
@@ -37,6 +37,16 @@
   </p>
   <p>All updates posted are focused on major additions or changes, for <u>all</u> changes follow along on <a href="https://github.com/jeremysmai/phantominc" target="_blank">Github</a></p>
   <p>
+    <h2>Update 5</h2>
+    <ul>
+      <li> Changed overall site font</li>
+      <li> Changed Background color scheme, added color</li>
+      <li> Added Shop page (under construction)</li>
+      <li> Other projects in the works, check the github </li>
+      &gt; &gt; posted October 2021 &lt; &lt;
+    </ul>
+  </p>
+  <p>
    <h2>Update 4</h2>
   <ul>
     <li> Updated Downloads page, added new look and items</li>
@@ -91,7 +101,7 @@
 </body>
 
 
-  <footer> &copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
+  <footer> &copy; Phantom Inc. 2021  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
 
 
 </html>
