--- a/shop.html
+++ b/shop.html
@@ -39,50 +39,52 @@
  <body>
     <p>
       <h1>Shop</h1>
-      <p>A small selection of 3D printed products! All prices include delivery. </p>
+      <h3 style="border: 1px solid #8bc34a; width:50%;">A small selection of 3D printed products! All prices include delivery. </h3>
     </p>
     <b>(coming soon) - finalizing designs</b>
     <br>
+    <p><h4 style="color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
     <br>
     <!-- Shop Time -->
     <center>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Orange)</h2>
+        <h2>iPhone 12 Max Case <h2 style="color:orange">(Orange)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Orange)<h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Clear-ish)</h2>
+        <h2>iPhone 12 Max Case <h2 style="text-shadow: 2px 2px 4px #000000;">(Clear-ish)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Clear-ish)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Green)</h2>
+        <h2>iPhone 12 Max Case <h2 style="color:green;">(Green)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Green)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Teal)</h2>
+        <h2>iPhone 12 Max Case <h2 style="color:blue;">(Teal)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Teal)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Pink)</h2>
+        <h2>iPhone 12 Max Case <h2 style="color:hotpink;">(Pink)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Pink)</h5><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case (Pastel Pink)</h2>
+        <h2>iPhone 12 Max Case <h2 style="color:pink;">(Pastel Pink)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Pastel Pink)</h5><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu">Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
   </center>
+  <p><h4 style="color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
     <br>
   <br>
  </body>
