updated titles with new format

--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
   -->
   <html>
   <head>
-    <title>Phantom Inc (Media)</title>
+    <title>Phantom Inc |'' | - [Media]</title>
     <link rel="stylesheet" href="css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -28,8 +28,9 @@
            .embed-container iframe { top: 0; left: 0; width: 100%; height: 100%; }
     </style>
     <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-  <div class="navigation">
-    <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
+    <div class="navigation">
+      <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+      <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
   </div>
 </head>
   <body>
