--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
   -->
 <html>
 <head>
-  <title>Phantom Inc |'' | - Shop</title>
+  <title>Phantom Inc |'' | - [Shop]</title>
   <link rel="stylesheet" href="css/shop.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
