fixed shop buttons, added text shadow

--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
     </p>
     <b>(coming soon) - finalizing designs</b>
     <br>
-    <p><h4 style="color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
+    <p><h4 style="text-shadow: 2px 2px 4px; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
     <br>
     <!-- Shop Time -->
     <center>
@@ -84,7 +84,7 @@
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
   </center>
-  <p><h4 style="color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
+  <p><h4 style="text-shadow: 2px 2px 4px; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
     <br>
   <br>
  </body>
