fixed shop page shadow

--- a/shop.html
+++ b/shop.html
@@ -41,9 +41,9 @@
       <h1>Shop</h1>
       <h3 style="border: 1px solid #8bc34a; width:50%;">A small selection of 3D printed products! All prices include delivery. </h3>
     </p>
-    <b>(coming soon) - finalizing designs</b>
+    <b>(coming soon) - finalizing designs -- adding checkout buttons</b>
     <br>
-    <p><h4 style="text-shadow: 2px 2px 4px; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
+    <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
     <br>
     <!-- Shop Time -->
     <center>
@@ -84,7 +84,7 @@
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
   </center>
-  <p><h4 style="text-shadow: 2px 2px 4px; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> * </h4></p>
+  <p><h4 style="text-shadow: 2px 2px 4px; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
     <br>
   <br>
  </body>
