sample payloads, update 3d downloads

--- a/downloads.html
+++ b/downloads.html
@@ -89,6 +89,15 @@
      </td>
     <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
   </tr>
+  <tr>
+    <td> JD's Square Planter - <a href="https://www.tinkercad.com/things/3jETiXglkNr">Tinker</a> </td>
+    <td> 0.2 </td>
+    <td> First Planter utiilizing all space on the Prusa Mini+<br>
+         Infill: 15% </br>
+         Filament: PLA/PETG </br>
+     </td>
+    <td> <img src="images/3d/squareplanter01.png" width="216" height="135" /> </td>
+  </tr>
  </table>
 </center>
 
