updates to download page added

--- a/downloads.html
+++ b/downloads.html
@@ -40,11 +40,9 @@
  <p>
    <h4> Recent Updates </h4>
      <ul>
-      <li> Added new download section Hello 3D </li>
-      <li> Added new Game Downloads Section </li>
-      <li> Fixed update.sh script for autoremove feature </li>
-      <li> Fixed SCP issue in .basrc script, actually works </li>
-    &gt; &gt; updated December 2020 &lt; &lt;
+      <li> 3D Print added </li>
+      <li> Scripts updated for current year </li>
+    &gt; &gt; updated January 2022 &lt; &lt;
     </ul>
  </p>
 <!-- Games Table Section  -->
