updated noscript css link, added payload

--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 <head>
   <title>Phantom Inc |'' | - [Shop]</title>
   <link rel="stylesheet" href="css/shop.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
