--- a/network.html
+++ b/network.html
@@ -8,7 +8,7 @@
 <head>
   <title>Phantom Inc |'' | - [Network]</title>
   <link rel="stylesheet" href="css/main.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <!-- Favicon -->
       <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
