--- a/downloads.html
+++ b/downloads.html
@@ -27,7 +27,7 @@
 <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
 <div class="navigation">
  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
- <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i> Start</button></a>
+ <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i></button></a>
  <a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
  </div>
@@ -79,15 +79,6 @@
     <th> Preview </th>
   </tr>
   <tr>
-    <td> JD Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
-    <td> 0.1 </td>
-    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599">Large Low Poly Planter</a> <br>
-         Infill: 15% </br>
-         Filament: PLA/PETG </br>
-     </td>
-    <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
-  </tr>
-  <tr>
     <td> JD's Square Planter - <a href="https://www.tinkercad.com/things/3jETiXglkNr">Tinker</a> </td>
     <td> 0.2 </td>
     <td> First Planter utiilizing all space on the Prusa Mini+<br>
@@ -95,6 +86,15 @@
          Filament: PLA/PETG </br>
      </td>
     <td> <img src="images/3d/squareplanter01.png" width="216" height="135" /> </td>
+  </tr>
+  <tr>
+    <td> JD Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
+    <td> 0.1 </td>
+    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599">Large Low Poly Planter</a> <br>
+         Infill: 15% </br>
+         Filament: PLA/PETG </br>
+     </td>
+    <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
   </tr>
  </table>
 </center>
