--- a/shop.html
+++ b/shop.html
@@ -47,10 +47,16 @@
     <br>
     <!-- Shop Time -->
     <center>
+      <div class="product"><img src="images/3d/squareplanter01.png" />
+        <h2> JD's Square Planter <h2 style="color:green">(Multicolor)</h2>
+        <p class="price">$20</p>
+        <p><h5>My first official print! Its a planter! Pick your color!</h5><h4>Printed with PETG</h4></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
+
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case <h2 style="color:orange">(Orange)</h2>
         <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Orange)<h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case (Orange)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
