--- a/shop.html
+++ b/shop.html
@@ -47,12 +47,12 @@
     <br>
     <!-- Shop Time -->
     <center>
-      <div class="product"><img src="images/3d/squareplanter01.png" />
+      <div class="product"><img src="images/3d/squareplanter01.png" height="100px" width="150px" />
         <h2> JD's Square Planter <h2 style="color:green">(Multicolor)</h2>
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! Pick your color!</h5><h4>Printed with PETG</h4></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
-
+      </div>
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case <h2 style="color:orange">(Orange)</h2>
         <p class="price">$15</p>
