added services to support page

--- a/support.html
+++ b/support.html
@@ -39,6 +39,16 @@
 
   <h1>IT SUPPORT</h1>
 </br>
+<p> I provide many IT services, if you are looking for a quote please <a href="https://www.phantominc.net/contact.html">contact me!</a></p>
+  <ul>
+    <li> IT Consulting</li>
+    <li> Phone Repair </li>
+    <li> Tablet Repair </li>
+    <li> Website Creation </li>
+    <li> 3D printing services </li>
+    <li> Installation (Software, OS Hardware) </li>
+  </ul>
+  <br>
   <!--notice>
     Below I have provided links to tools that are very common but powerful and are currently used in the IT field.
   </notice-->
