added item to list

--- a/support.html
+++ b/support.html
@@ -48,6 +48,7 @@
     <li> Website Creation </li>
     <li> 3D printing services </li>
     <li> Installation (Software, OS Hardware) </li>
+    <li> IT Tech Support </li>
   </ul>
   <br>
   <!--notice>
