added menu back to support, changed wording on main page

--- a/support.html
+++ b/support.html
@@ -30,25 +30,25 @@
   <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <center>
   <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
+  <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+  <a href="https://www.phantominc.net/shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+  <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
   <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-  <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
-  <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
-  <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li -->
+
     </center>
 
   <h1>IT SUPPORT</h1>
 </br>
 <p> I provide many IT services, if you are looking for a quote please <a href="https://www.phantominc.net/contact.html">contact me!</a></p>
+  <h2> Services </h2>
   <ul>
-    <li> IT Consulting</li>
-    <li> Phone Repair </li>
-    <li> Tablet Repair </li>
-    <li> Website Creation </li>
-    <li> 3D printing services </li>
-    <li> Installation (Software, OS Hardware) </li>
-    <li> IT Tech Support </li>
+    <li> IT Consulting (Software suggestions to Network Layout)</li>
+    <li> Phone Repair (iPhone, Samsung, Google, etc.) </li>
+    <li> Tablet Repair (iPad, Fire Tablet, etc.) </li>
+    <li> Website Creation (Templates to Full Customization)</li>
+    <li> 3D printing services (3D modeling - print to order)</li>
+    <li> Installation (Software to Hardware) </li>
+    <li> IT Tech Support (Turn it off and on again?)</li>
   </ul>
   <br>
   <!--notice>
