--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <br>
 <center>  </center>
 <center><h2>Hello and Welcome to Phantom Inc's Official Website!
-<br>  Here is the latest venture back into mostly HTML<br>Hope you enjoy!</center>
+<br>The one stop shop for<br> Device Repairs | Website Creation | 3D prints | and more...
+<br>
+<!--Here is the latest venture back into mostly HTML<br>Hope you enjoy!--></center>
   </h2></p>
 <br>
   <p><center><h2> - - - </h2></center></p>
@@ -53,7 +55,7 @@
   Phantom Inc. an idea from long ago. <br>
   This site was created to keep track of all my random projects <br>
   Visit the Downloads page to see what I'm currently working on. <br>
-  Stayed Tuned.
+  Stayed Tuned for more.
   </p>
   <br>
     <p><center><h2> - - - </h2></center></p>
