changed text size on index

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   <p>
     <br>
 <center>  </center>
-<center><h2>Hello and Welcome to Phantom Inc's Official Website!
-<br>The one stop shop for<br> Device Repairs | Website Creation | 3D prints | and more...
+<center><h2>Hello and Welcome to Phantom Inc's Official Website!</h2>
+<h3>The one stop shop for<br> Device Repairs | Website Creation | 3D prints | and more...</h3>
 <br>
 <!--Here is the latest venture back into mostly HTML<br>Hope you enjoy!--></center>
-  </h2></p>
+  </p>
 <br>
   <p><center><h2> - - - </h2></center></p>
 <br>
