added title above updates

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <p><center><h2> - - - </h2></center></p>
   <br>
     <!-- Start of Post Section -->
-
+    <h2>Latest Update</h2>
+    <p>
      <h2 style="border: 1px solid #8bc34a; width:150px;">Update 5</h2>
     <ul>
       <li> Changed overall site font</li>
@@ -70,7 +71,7 @@
       <li> Other projects in the works, check the github </li>
       &gt; &gt; posted October 2021 &lt; &lt;
     </ul>
-
+</p>
 <br>
     <!-- All Posts Button -->
   <center><a href="updates.html"><button class="menu"><i class="fas fa-scroll" alt="Old Site"></i> All Updates </button></a></center>
