added icon, changed wording, changed spacing

--- a/support.html
+++ b/support.html
@@ -37,7 +37,7 @@
     </center>
   <h1>IT SUPPORT</h1>
 </br>
-<p> I provide many IT services, if you are looking for a quote please <a href="https://www.phantominc.net/contact.html">contact me!</a></p>
+<p> I provide many IT services, if you're looking for a quote please <a href="https://www.phantominc.net/contact.html">contact me!</a></p>
   <h2> Services </h2>
   <ul>
     <li> IT Consulting (Software suggestions to Network Layout)</li>
@@ -87,6 +87,8 @@
       <span class="bubbletext">The origianl full secuirty Suite, jam packed with tools to tinker with all sorts of different applications.</span>
     </button></a>
   </p>
+  <br>
+<p><a href="https://www.phantominc.net/startpage"><img src="images/phanicon-32x32.svg" /></a></p>
 <br>
 <br>
   </body>
