--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
         <h2> JD's Square Planter <h2 style="color:green">(Multicolor)</h2>
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! Pick your color!</h5><h4>Printed with PETG</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case <h2 style="color:orange">(Orange)</h2>
@@ -63,7 +63,7 @@
         <h2>iPhone 12 Max Case <h2 style="text-shadow: 2px 2px 4px #000000;">(Clear-ish)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case (Clear-ish)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case <h2 style="color:green;">(Green)</h2>
