updated download - 3d prints -page width +10%

--- a/downloads.html
+++ b/downloads.html
@@ -40,9 +40,9 @@
  <p>
    <h4> Recent Updates </h4>
      <ul>
-      <li> 3D Print added </li>
-      <li> Scripts updated for current year </li>
-    &gt; &gt; updated January 2022 &lt; &lt;
+      <li> more 3D Prints added </li>
+      <li> Scripts updated to always show current year, less updates </li>
+    &gt; &gt; updated December 2022 &lt; &lt;
     </ul>
  </p>
 <!-- Games Table Section  -->
@@ -78,17 +78,29 @@
     <th> Description </th>
     <th> Preview </th>
   </tr>
+<!-- PRINT POST -->
   <tr>
     <td> JD's Square Planter - <a href="https://www.tinkercad.com/things/3jETiXglkNr">Tinker</a> </td>
     <td> 0.2 </td>
     <td> First Planter utiilizing all space on the Prusa Mini+<br>
-         Infill: 15% </br>
+         Infill: 20% </br>
          Filament: PLA/PETG </br>
      </td>
     <td> <img src="images/3d/squareplanter01.png" width="216" height="135" /> </td>
   </tr>
+<!-- PRINT POST -->
   <tr>
-    <td> JD Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
+    <td> JD's Square Planter Plate - <a href="https://www.tinkercad.com/things/4Yfz68wsNAO">Tinker</a> </td>
+    <td> 0.1 </td>
+    <td> The matching planter plate <br>
+         Infill: 20% </br>
+         Filament: PLA/PETG </br>
+     </td>
+    <td> <img src="images/3d/squareplanterplate01.png" width="216" height="135" /> </td>
+  </tr>
+<!-- PRINT POST -->
+  <tr>
+    <td> Poly Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
     <td> 0.1 </td>
     <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599">Large Low Poly Planter</a> <br>
          Infill: 15% </br>
@@ -96,6 +108,37 @@
      </td>
     <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
   </tr>
+<!-- PRINT POST -->
+  <tr>
+    <td> Phantom Tray - <a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg">Tinker</a> </td>
+    <td> 0.5 </td>
+    <td> A perfect tray for any of you rolling needs  <br>
+         Infill: 20% </br>
+         Filament: PLA/PETG </br>
+     </td>
+    <td> <img src="images/3d/phantomtray05.png" width="216" height="135" /> </td>
+  </tr>
+<!-- PRINT POST -->
+  <tr>
+    <td> 2 Hole Strap - <a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo">Tinker</a> </td>
+    <td> 0.1 </td>
+    <td> 2 Hole strap that can be used for anything. <i>Example: mount cat5/6 cable to joists.</i> <br>
+         Infill: 20% </br>
+         Filament: PETG (for strength) </br>
+     </td>
+    <td> <img src="images/3d/2holestrap01.png" width="216" height="135" /> </td>
+  </tr>
+<!-- PRINT POST -->
+  <tr>
+    <td> Multi Hook Door Hanger - <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg">Tinker</a> </td>
+    <td> 0.2 </td>
+    <td> Over the door hook that allows multiple hanger items <br>
+         Infill: 20% </br>
+         Filament: PETG (for strength) </br>
+     </td>
+    <td> <img src="images/3d/multihookdoorhanger02.png" width="216" height="135" /> </td>
+  </tr>
+<!-- PRINT POST -->
  </table>
 </center>
 
