--- a/shop.html
+++ b/shop.html
@@ -54,40 +54,11 @@
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="color:orange">(Orange)</h2>
+        <h2>iPhone 12 Max Case (Multicolor)</h2>
         <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Orange)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
-      </div>
-      <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="text-shadow: 2px 2px 4px #000000;">(Clear-ish)</h2>
-        <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Clear-ish)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) filament or SainSmart TPU (92A).</h4></p>
+        <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">(Clear-ish)</h5><h5 style="color:green;">(Green)</h5><h5 style="color:blue;">(Teal)</h5><h5 style="color:hotpink;">(Pink)</h5><h5 style="color:pink;">(Pastel Pink)</h5></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
-      </div>
-      <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="color:green;">(Green)</h2>
-        <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Green)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
-      </div>
-      <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="color:blue;">(Teal)</h2>
-        <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Teal)</h5><h4>Printed with Overture TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
-      </div>
-      <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="color:hotpink;">(Pink)</h2>
-        <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Pink)</h5><h4>Printed with SainSmart TPU (95A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
-      </div>
-      <div class="product"><img src="images/3d/example.png" />
-        <h2>iPhone 12 Max Case <h2 style="color:pink;">(Pastel Pink)</h2>
-        <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case (Pastel Pink)</h5><h4>Printed with SainSmart TPU (92A) filament.</h4></p>
-        <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fas fa-shopping-cart"></i> Buy Now</button></a></p>
       </div>
   </center>
   <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
