--- a/shop.html
+++ b/shop.html
@@ -51,12 +51,13 @@
         <h2> JD's Square Planter <h2 style="color:green">(Multicolor)</h2>
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! Pick your color!</h5><h4>Printed with PETG</h4></p>
+        <p><h5>Colors In Stock:</h5></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case (Multicolor)</h2>
         <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) filament or SainSmart TPU (92A).</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) filament </br>or</br> SainSmart TPU (92A).</h4></p>
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">(Clear-ish)</h5><h5 style="color:green;">(Green)</h5><h5 style="color:blue;">(Teal)</h5><h5 style="color:hotpink;">(Pink)</h5><h5 style="color:pink;">(Pastel Pink)</h5></p>
         <!--Put Paypal Button Here! --><p><a href=""><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fsa fa-download"></i> Download</button></a></p>
       </div>
