reworked downloads appearence

--- a/downloads.html
+++ b/downloads.html
@@ -112,7 +112,7 @@
   <tr>
     <td> Phantom Tray - <a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg">Tinker</a> </td>
     <td> 0.5 </td>
-    <td> A perfect tray for any of you rolling needs  <br>
+    <td> A perfect tray for any of your rolling needs  <br>
          Infill: 20% </br>
          Filament: PLA/PETG </br>
      </td>
