fixed download links, fixed year, testing javascript fix

--- a/downloads.html
+++ b/downloads.html
@@ -153,7 +153,7 @@
     <th> OS </th>
   </tr>
   <tr>
-    <td><a href="https://jeremysmai.github.io/phantominc/downloads/scripts/update.sh.zip">Update.sh </a> </td>
+    <td><a href="https://jeremysmai.github.io/phantominc/downloads/scripts/update.zip">Update.sh </a> </td>
     <td> 0.3 </td>
     <td>Common Linux script, written in bash for quick updating</td>
     <td><i class="fab fa-linux"></i> (Linux)</td>
