--- a/startpage.html
+++ b/startpage.html
@@ -112,5 +112,5 @@
 </script>
   </body>
 
-  <footer> &copy; Phantom Inc. 2022 <img src="images/phanicon-bw.svg"/> version: 1.2 </footer>
+  <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-bw.svg"/> version: 1.2 </footer>
 </html>
