--- a/network.html
+++ b/network.html
@@ -36,6 +36,6 @@ In a future release this will be replaced with Network stats such as IP, ping te
     </p>
 </body>
 
- <footer> &copy; Phantom Inc. 2023  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
+ <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
 
 </html>
