--- a/shop/product0.html
+++ b/shop/product0.html
@@ -59,5 +59,5 @@
     <br>
   <br>
  </body>
- <footer> &copy; Phantom Inc. 2023  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
+ <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
 </html>
