added stickers to the shop

--- a/shop.html
+++ b/shop.html
@@ -67,6 +67,14 @@
         <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) </br>or</br> SainSmart TPU (92A) filament.</h4></p>
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5><h5 style="color:blue;">Teal</h5><h5 style="color:hotpink;">Pink</h5><h5 style="color:pink;">Pastel Pink</h5></p>
         <!--Put Paypal Button Here! --><p><a href="product2.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
+      </div>
+      </br>
+      <div class="product"><img src="images/phantom_sticker.png" height="150" width="150"/>
+        <h2>Phantom Inc Stickers </br></h2>
+        <p class="price">10 for $9</p>
+        <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
+        <p><h5 style="color:white"> * Regular</h5><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic</h5></p>
+        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai"><button class="menu"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>    
   </center>
   <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
