fixed box shadow on image startpage

--- a/startpage.html
+++ b/startpage.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
+  <center><img src="images/phantom-icon.png" height="300" width="300" alt="Phantom low Rez" /></center>
   <p>
     <center>
   <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
