updated shop items with sticker links

--- a/shop.html
+++ b/shop.html
@@ -73,9 +73,16 @@
         <h2>Phantom Inc Stickers </br></h2>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
-        <p><h5 style="color:white"> * Regular</h5><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic</h5></p>
-        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai"><button class="menu"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
-      </div>    
+        <p><h5 style="color:white"> * Regular</h5></p>
+        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11427837"><button class="menu"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
+      </div>
+      <div class="product"><img src="images/phantom_sticker_holo.png" height="150" width="150"/>
+        <h2>Phantom Inc Stickers </br></h2>
+        <p class="price">10 for $9</p>
+        <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
+        <p><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic</h5></p>
+        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11557838"><button class="menu"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
+      </div>     
   </center>
   <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
     <br>
