--- a/network.html
+++ b/network.html
@@ -13,7 +13,7 @@
     <!-- Favicon -->
       <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
     <!-- Mobile Site Fix BB -->
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
  <script>
