--- a/startpage.html
+++ b/startpage.html
@@ -14,7 +14,7 @@
     <!-- Favicon -->
       <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <!--Quick little hack for speedtest -->
    <style>
    .st {
