added new logo everywhere, added logos on media, new bg

--- a/wishlist.html
+++ b/wishlist.html
@@ -46,7 +46,7 @@
       }
       </style>
 <!-- Start Visual-->
-<center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+<center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
         <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.amazon.com/hz/wishlist/ls/1IJOW7VZT5MLP?ref_=wl_share"><button class="menu"><i class="fab fa-amazon"></i> Amazon Version</button></a>
