--- a/downloads.html
+++ b/downloads.html
@@ -24,7 +24,7 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
-<center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+<center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
 <div class="navigation">
  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
  <a href="https://www.phantominc.net/startpage"><button class="menu"><i class="fas fa-chess-rook"></i></button></a>
