--- a/media.html
+++ b/media.html
@@ -27,7 +27,7 @@
     <style>.embed-container { position: relative; }
            .embed-container iframe { top: 0; left: 0; width: 100%; height: 100%; }
     </style>
-    <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+    <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <div class="navigation">
       <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
@@ -54,7 +54,11 @@
 <br>
 <h2>- - Wallpapers - -</h2>
 <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
-  <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250" alt="4K-Skyline"></a>
+  <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250" alt="4K-Skyline"></a> <a href="images/background.jpg"><img src="images/background.jpg" height="150" width="250"></a>
+<br>
+<br>
+<h2>- - Logos - -</h2>
+<a href="images/logo.jpg"><img src="images/logo.jpg" height="150" width="150"></a> <a href="images/fresh_logo.jpg"><img src="images/fresh_logo.jpg" height="150" width="150"></a> <a href="images/phantom_inc.JPG"><img src="images/phantom_inc.JPG" height="150" width="150"></a> <a href="images/phantominc.jpeg"><img src="images/phantominc.jpeg" height="150" width="150"></a>
 <br>
 <br>
 <center><img src="images/phanicon-32x32.svg" /></center>
