fixed image file

--- a/media.html
+++ b/media.html
@@ -58,7 +58,7 @@
 <br>
 <br>
 <h2>- - Logos - -</h2>
-<a href="images/logo.jpg"><img src="images/logo.jpg" height="150" width="150"></a> <a href="images/fresh_logo.jpg"><img src="images/fresh_logo.jpg" height="150" width="150"></a> <a href="images/phantom_inc.JPG"><img src="images/phantom_inc.JPG" height="150" width="150"></a> <a href="images/phantominc.jpeg"><img src="images/phantominc.jpeg" height="150" width="150"></a>
+<a href="images/logo.jpg"><img src="images/logo.jpg" height="150" width="150"></a> <a href="images/fresh_logo.JPG"><img src="images/fresh_logo.JPG" height="150" width="150"></a> <a href="images/phantom_inc.JPG"><img src="images/phantom_inc.JPG" height="150" width="150"></a> <a href="images/phantominc.jpeg"><img src="images/phantominc.jpeg" height="150" width="150"></a>
 <br>
 <br>
 <center><img src="images/phanicon-32x32.svg" /></center>
