--- a/shop.html
+++ b/shop.html
@@ -52,21 +52,21 @@
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
-        <!--Put Paypal Button Here! --><p><a href="product0.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href="shop/product0.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/squareplanterplate01.png" height="100" width="150"/>
         <h2> JD's Square Planter Plate<h2 style="color:green">(Multicolor)</h2>
         <p class="price">$10</p>
         <p><h5>Its a planter plate! Goes along with the Planter print </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
-        <!--Put Paypal Button Here! --><p><a href="product1.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href="shop/product1.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/example.png" />
         <h2>iPhone 12 Max Case </br> (Multicolor)</h2>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) </br>or</br> SainSmart TPU (92A) filament.</h4></p>
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5><h5 style="color:blue;">Teal</h5><h5 style="color:hotpink;">Pink</h5><h5 style="color:pink;">Pastel Pink</h5></p>
-        <!--Put Paypal Button Here! --><p><a href="product2.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
+        <!--Put Paypal Button Here! --><p><a href="shop/product2.html"><button class="menu"><i class="fa-solid fa-circle-info"></i> More Info</button></a><a href="https://www.phantominc.net/downloads"><button class="menu"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       </br>
       <div class="product"><img src="images/phantom_sticker.png" height="150" width="150"/>
