--- a/shop/product1.html
+++ b/shop/product1.html
@@ -26,7 +26,7 @@
     gtag('config', 'UA-122993902-1');
  </script>
 <!-- Start Visual-->
-  <center><img src="images/phantominc.jpeg" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
         <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
