fixed product page css linking

--- a/shop/product2.html
+++ b/shop/product2.html
@@ -7,12 +7,12 @@
 <html>
 <head>
   <title>Phantom Inc |'' | - [Shop/product1]</title>
-  <link rel="stylesheet" href="css/shop.css" />
-  <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+  <link rel="stylesheet" href="../css/shop.css" />
+  <noscript><link rel="stylesheet" href="../css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-      <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
+      <link rel="icon" href="../images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Phantom Inc Official Website for IT Support, Photorgraphy and More!">
@@ -26,7 +26,7 @@
     gtag('config', 'UA-122993902-1');
  </script>
 <!-- Start Visual-->
-  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <center><img src="../images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
         <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
@@ -47,7 +47,7 @@
     <br>
     <!-- Shop Time -->
     <center>
-        <div class="product"><img src="images/3d/example.png" />
+        <div class="product"><img src="../images/3d/example.png" />
             <h2>iPhone 12 Max Case </br> (Multicolor)</h2>
             <p class="price">$15</p>
             <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) </br>or</br> SainSmart TPU (92A) filament.</h4></p>
@@ -59,5 +59,5 @@
     <br>
   <br>
  </body>
- <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
+ <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="../images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
 </html>
